[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/game_over_dialog.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/ttf/UbuntuMono-B.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://new_test.theme" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.235294, 0.101961, 0.180392, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.290196, 0.156863, 0.215686, 1 )
border_blend = true
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 4
shadow_offset = Vector2( 2, 2 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 1
extra_spacing_bottom = 1
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 1
extra_spacing_bottom = 1
extra_spacing_char = 1
font_data = ExtResource( 2 )

[node name="GameOverDialog" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -225.0
margin_right = 384.0
margin_bottom = 225.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 430.0

[node name="LabelGameOver" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 728.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.235294, 0.490196, 0.678431, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "The city fell to the monsters!!

Waves Survived: "
align = 1
valign = 1

[node name="LabelWavesSurvived" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 179.0
margin_right = 728.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.976471, 0.984314, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "11"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 358.0
margin_right = 728.0
margin_bottom = 410.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 360.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 60
custom_constants/margin_left = 60

[node name="RestartButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 60.0
margin_right = 300.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "restart"

[node name="MarginContainer3" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 728.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 120
custom_constants/margin_left = 120

[node name="MainMenuButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3"]
margin_left = 120.0
margin_right = 608.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "to main menu"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
